--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+<fa-other></fa-other>
+<fa-another>
+  <div>
+    <h2>Hello</h2>
+    <p>World</p>
+  </div>
+
+</fa-another>
